force-app/main/default/objects/DS_Sankey_Config__c/DS_Sankey_Config__c.object-meta.xml
<!-- Story 9.1: Custom object for saved Sankey configurations -->
<CustomObject>
    <description>Stores saved Sankey Builder configurations for reuse (Story 9.1)</description>
    <label>Sankey Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sankey Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>