force-app/main/default/objects/DS_Sankey_Config__c/fields/Filters_JSON__c.field-meta.xml
<!-- Story 9.1: Saved filter configuration as JSON -->
<CustomField>
    <fullName>Filters_JSON__c</fullName>
    <description>JSON-serialized filter configuration</description>
    <label>Filters JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>