force-app/main/default/objects/DS_Sankey_Config__c/fields/Metric_Field__c.field-meta.xml
<!-- Story 9.1: Saved metric field (when AMOUNT type selected) -->
<CustomField>
    <fullName>Metric_Field__c</fullName>
    <description>API name of the numeric field used for AMOUNT metric</description>
    <label>Metric Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>