force-app/main/default/objects/DS_Sankey_Config__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <description>Metric type for link width: COUNT or AMOUNT</description>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
                <default>true</default>
                <label>COUNT</label>
            </value>
            <value>
                <fullName>AMOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>