force-app/main/default/objects/DS_Sankey_Config__c/fields/Null_Handling__c.field-meta.xml
<CustomField>
    <fullName>Null_Handling__c</fullName>
    <description>Strategy for handling null values in path fields</description>
    <label>Null Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STOP</fullName>
            </value>
            <value>
                <fullName>GROUP_UNKNOWN</fullName>
                <default>true</default>
                <label>GROUP_UNKNOWN</label>
            </value>
            <value>
                <fullName>CARRY_FORWARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>