force-app/main/default/objects/DS_Sankey_Config__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>API name of the Salesforce object for this Sankey config</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>