force-app/main/default/objects/DS_Sankey_Config__c/fields/Path_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Path_Fields_JSON__c</fullName>
    <description>JSON-serialized ordered path field list</description>
    <label>Path Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>