force-app/main/default/objects/DS_Sankey_Config__c/fields/Record_Id_Field__c.field-meta.xml
<!-- Story 9.1 / Story 3.3: Saved record ID field -->
<CustomField>
    <fullName>Record_Id_Field__c</fullName>
    <description>API name of the record identifier field (default: Id)</description>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <label>Record ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>